[package]
name = "todo-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
config = "0.15.11"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.12", features = [
  "macros",
  "runtime-tokio",
  "sqlx-postgres",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
